// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentsForm component renders as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="Toastify"
  />
  .c1 {
  font-size: 1.6rem;
  color: black;
  text-align: left;
  padding-top: 1.5rem;
  font-family: BcSans-Bold;
}

.c0 {
  margin-left: 1rem;
  font-size: 1.4rem;
  row-gap: 0.5rem;
  grid-template-columns: [controls] 1fr;
}

.c0 .form-group {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .form-group input {
  width: 70%;
}

.c0 > .form-label {
  grid-column: controls;
  font-family: 'BcSans-Bold';
}

.c0 .form-control {
  font-family: 'BcSans';
}

.c0 .required .form-label:after {
  content: ' *';
}

.c2.table {
  min-width: 155rem;
}

.c2.table .thead .tr .th {
  padding: 0.5rem 0.5rem;
  font-size: 1.4rem;
  position: relative;
  color: white;
}

.c2.table .thead .tr .th .tooltip-icon {
  color: white;
  float: right;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  margin-left: 0.5rem;
  height: 1.1rem;
  width: 1.1rem;
}

.c2.table .thead .tr .th .sortable-column {
  width: 100%;
}

<div
    class="c0"
  >
    <h5
      class="c1"
    >
      Payments by Term
    </h5>
    <b>
      last payment received: 
    </b>
    <div
      class="table c2"
      data-testid="securityDepositsTable"
      role="table"
    >
      <div
        class="thead thead-light"
      >
        <div
          class="tr"
          role="row"
          style="display: flex; flex: 1 0 auto; min-width: 410px;"
        >
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 30 0 auto; min-width: 30px; width: 30px; justify-content: flex-start; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            />
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 100 0 auto; min-width: 80px; width: 100px; justify-content: flex-start; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Start date - End date
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: flex-start; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Payment frequency
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Payment due
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 65 0 auto; min-width: 30px; width: 65px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected payment ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              GST?
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 29 0 auto; min-width: 30px; width: 29px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              GST ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected total ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected term ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Actual total ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Exercised?
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 30 0 auto; min-width: 30px; width: 30px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Actions
            </div>
          </div>
        </div>
      </div>
      <div
        class="no-rows-message"
      >
        There is no corresponding data
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PaymentsForm component renders with data as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="Toastify"
  />
  .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c1 {
  font-size: 1.6rem;
  color: black;
  text-align: left;
  padding-top: 1.5rem;
  font-family: BcSans-Bold;
}

.c0 {
  margin-left: 1rem;
  font-size: 1.4rem;
  row-gap: 0.5rem;
  grid-template-columns: [controls] 1fr;
}

.c0 .form-group {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 .form-group input {
  width: 70%;
}

.c0 > .form-label {
  grid-column: controls;
  font-family: 'BcSans-Bold';
}

.c0 .form-control {
  font-family: 'BcSans';
}

.c0 .required .form-label:after {
  content: ' *';
}

.c2.table {
  min-width: 155rem;
}

.c2.table .thead .tr .th {
  padding: 0.5rem 0.5rem;
  font-size: 1.4rem;
  position: relative;
  color: white;
}

.c2.table .thead .tr .th .tooltip-icon {
  color: white;
  float: right;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  margin-left: 0.5rem;
  height: 1.1rem;
  width: 1.1rem;
}

.c2.table .thead .tr .th .sortable-column {
  width: 100%;
}

.c4 .btn {
  background-color: transparent;
  padding: 0;
}

<div
    class="c0"
  >
    <h5
      class="c1"
    >
      Payments by Term
    </h5>
    <b>
      last payment received: 
    </b>
    <div
      class="table c2"
      data-testid="securityDepositsTable"
      role="table"
    >
      <div
        class="thead thead-light"
      >
        <div
          class="tr"
          role="row"
          style="display: flex; flex: 1 0 auto; min-width: 410px;"
        >
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 30 0 auto; min-width: 30px; width: 30px; justify-content: flex-start; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            />
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 100 0 auto; min-width: 80px; width: 100px; justify-content: flex-start; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Start date - End date
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: flex-start; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Payment frequency
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Payment due
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 65 0 auto; min-width: 30px; width: 65px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected payment ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              GST?
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 29 0 auto; min-width: 30px; width: 29px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              GST ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected total ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Expected term ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Actual total ($)
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Exercised?
            </div>
          </div>
          <div
            class="th"
            colspan="1"
            role="columnheader"
            style="box-sizing: border-box; flex: 30 0 auto; min-width: 30px; width: 30px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
          >
            <div
              class="sortable-column"
            >
              Actions
            </div>
          </div>
        </div>
      </div>
      <div
        class="tbody"
        role="rowgroup"
      >
        <div
          class="tr-wrapper"
        >
          <div
            class="tr"
            role="row"
            style="display: flex; flex: 1 0 auto; min-width: 410px;"
          >
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 30 0 auto; min-width: 30px; width: 30px; justify-content: flex-start; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              Initial term
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 100 0 auto; min-width: 80px; width: 100px; justify-content: flex-start; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
               - 
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: flex-start; text-align: left; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            />
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 50 0 auto; min-width: 30px; width: 50px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            />
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 65 0 auto; min-width: 30px; width: 65px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              $0
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 25 0 auto; min-width: 30px; width: 25px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              N
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 29 0 auto; min-width: 30px; width: 29px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              -
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              $0
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              -
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 55 0 auto; min-width: 30px; width: 55px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              -
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 40 0 auto; min-width: 30px; width: 40px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              N
            </div>
            <div
              class="td"
              role="cell"
              style="box-sizing: border-box; flex: 30 0 auto; min-width: 30px; width: 30px; justify-content: flex-end; text-align: right; flex-wrap: wrap; align-items: center; display: flex;"
              title=""
            >
              <div
                class="c3 c4"
              >
                <button
                  class="Button Button--icon-only btn btn-primary"
                  type="button"
                >
                  <div
                    class="Button__icon"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      id="edit-term-0"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        edit term
                      </title>
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                  </div>
                </button>
                <button
                  class="Button Button--icon-only btn btn-primary"
                  type="button"
                >
                  <div
                    class="Button__icon"
                  >
                    <svg
                      fill="currentColor"
                      height="24"
                      id="delete-term-0"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 448 512"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        delete term
                      </title>
                      <path
                        d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
